# psi-praktikum

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: README.md  README.yaml  TimeCalibration_stepof32ns.Spe  stop_S6andS7_delay_05_mus_fs12_50mm.Spe
data/PSI_lab_2025/: TimeCalibration_delaytrigger.Spe  TimeCalibration_delaytrigger_05to7us.Spe  stop_S6andS7_delay_05_mus_fs12_50mm_longermeasurement.Spe  stop_S6andS7_delay_1_5_mus_fs12_135mm_60min_timinggivenbys7.Spe  stop_S6andS7_delay_1_5_mus_fs12_135mm_somemin_timinggivenbys7_CFD.Spe  stop_S6andS7_delay_1_5_mus_fs12_135mm_timinggivenbys7_CFD_allstat.Spe  stop_S6andS7_delay_1_5_mus_fs12_50and100and135mm_50min.Spe  stop_S6andS7_delay_1_5_mus_fs12_50and100mm_30min.Spe  stop_S6andS7_delay_1_5_mus_fs12_50mm_15min.Spe
notebooks/: example.ipynb
psi_praktikum/: __main__.py
psi_praktikum/_utils/: constants.py  mplstyles.py  paper.mplstyle  paths.py
report/: main.tex
